# chemxor

./: .darglint  .flake8  .gitignore  README.md  env.yaml  pyproject.toml
data/01_raw/: train_res.csv
docs/source/: conf.py  index.rst
notebooks/: data_exploration.ipynb  fhe_olindanet_models.ipynb  olindanet_internals.ipynb  olindanet_one_internals.ipynb  olindanet_zero_internals.ipynb  train_olindanet_models.ipynb
scripts/: setup_env.py
src/chemxor/: __init__.py  cli.py  ersilia_output_slim.csv  grid_transformer.joblib  hooks.py  part_net_client.py  part_net_service.py  pipeline_registry.py  server.py  service.py  settings.py  utils.py
src/chemxor/cli/: __init__.py  main.py  partnet.py
src/chemxor/config/: __init__.py
src/chemxor/crypt/: __init__.py  fhe.py  fhe_torch_ops.py  onnx_utils.py
src/chemxor/data/: __init__.py  enc_conv_dataset.py  enc_dataset.py  generic.py  generic_classification_module.py  generic_regression_module.py  mnist.py  osm.py  sm_img.py
src/chemxor/data_modules/: __init__.py  enc_conv_dataset.py  enc_dataset.py  mnist.py  osm.py  sm_img.py  smiles_to_img.py
src/chemxor/model/: __init__.py  blocks.py  convnet.py  cryptic_sage.py  enc_convnet.py  encrypted_sage.py  fhe_activation.py  fhe_wrapper.py  olinda_net.py
src/chemxor/observer/: __init__.py
src/chemxor/pipelines/: __init__.py  nodes.py  olinda_train_classification.py  olinda_train_regression.py  pipelines.py  smiles_preprocess.py
src/chemxor/pipelines/convnet_default/: __init__.py  nodes.py  pipeline.py
src/chemxor/pipelines/convnet_smiles/: __init__.py  nodes.py  pipeline.py
src/chemxor/pipelines/cryptic_sage_default/: __init__.py  (+2 more)
src/chemxor/routes/: __init__.py  cryptic_sage.py  status.py  test_encryption.py
src/chemxor/schema/: fhe_model.py  test_encryption.py
src/chemxor/service/: __init__.py  blocs.py  part_net_client.py  part_net_server.py
tests/: __init__.py  test_run.py
tests/pipelines/: __init__.py
(+14 files in other folders)
