[tool.poetry]
name = "chemxor"
version = "0.6.0"
description = "Privacy Preserving AI/ML for Drug Discovery"
authors = ["Ankur Kumar <ank@leoank.me>"]
license = "GPLv3"
readme = "./README.md"
include = [
    "./src/chemxor/grid_transformer.joblib",
    "./src/chemxor/ersilia_output_slim.csv",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
pydantic = { extras = ["dotenv"], version = "^1.8.2" }
logzero = "^1.7.0"
torch = { extras = ["cpu"], version = "^1.10.0" }
pandas = "^1.4"
pytorch-lightning = "^1.6.1"
rdkit-pypi = "^2022.3.1"
tenseal = "^0.3.11"
Flask = "^2.1.2"
protobuf = "3.19.1"
regex = "2022.7.9"
feather-format = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = "^22.3.0"
flake8-black = "^0.3.2"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^22.3.23"
flake8-bandit = "^3.0.0"
safety = "^1.10.3"
mypy = "^0.942"
flake8-annotations = "^2.8.0"
typeguard = "^2.13.3"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
pre-commit = "^2.18.1"
nox = "^2022.1.7"
factory-boy = "^3.2.1"
pytest-mock = "^3.7.0"
kedro = "^0.18.0"
jupyterlab = "^3.3.2"
nglview = "^3.0.3"
kedro-viz = "^4.4.0"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.1"

[tool.poetry.scripts]
chemxor = "chemxor.cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "chemxor"
project_name = "chemxor"
project_version = "0.18.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"


[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/february -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
